# xml_json_converter

./: CMakeLists.txt  main.cc
archive/: ToJsonController.cc  ToJsonController.h  ToXmlController.cc  ToXmlController.h
controllers/: ToJsonController.cc  ToXmlController.cc
filters/: Makefile.linux  Makefile.windows
include/: controllers.h
release/: README.md  config.json  run.sh
test/: CMakeLists.txt
xml_json_docs/: Curl.md  Drogon.md  JSONPath.md  README.md  README2.md  ToXmlController.cc  XML-JSON-CONVERSION.md  XMLREADME.md  example.xml  student.xml
